gcc/rtlanal.c
@@ -6243,6 +6243,19 @@ contains_symbol_ref_p (const_rtx x)
   return false;
 }
 
+/* Return true if RTL X contains a SYMBOL_REF or LABEL_REF.  */
+
+bool
+contains_symbolic_reference_p (const_rtx x)
+{
+  subrtx_iterator::array_type array;
+  FOR_EACH_SUBRTX (iter, array, x, ALL)
+    if (SYMBOL_REF_P (*iter) || GET_CODE (*iter) == LABEL_REF)
+      return true;
+
+  return false;
+}
+
 /* Return true if X contains a thread-local symbol.  */
 
 bool
